<resources>
    <string name="app_name">Nova Scotia Provincial Employee Emergency Guide</string>
    <string name="appGUID">4a1c6648-9cc2-4703-af50-6fa503f84dec</string>
    <string name="clientSecret">811d26d3-3678-46db-8ece-ca009208d7e4</string>
    <string name="title_activity_notification">Notification</string>
    <string name="main_enter_email_text">Enter your email and password</string>
    <string name="main_gov_restriction_text">This application is intended for use by employees of the Province of Nova Scotia</string>
    <string name="token_enter_token">Please check your email and enter the verification token provided.</string>
    <string name="main_email_invalid">Please enter a Nova Scotia government email.</string>
    <string name="tokenErrorText">Sorry the token you have entered is incorrect. Please try again.</string>
    <string name="sendGridApiKey">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</string>
    <string name="emailVerifiedDateKey">EMAIL_VERIFIED_DATE</string>
    <string name="revalidateText">You must re-validate your email address. Open the app to send the verification email.</string>
    <string name="revalidateTitle">ServICE must be re-validated!</string>
    <string name="notificationsTableName">notifications</string>
    <string name="Health_Link">Health Link</string>
    <string name="Poison_Control">Poison Control</string>
    <string name="QEII_Health">QEII Health Service Care</string>
    <string name="Police_Non_Emergency">Police Non-Emergency</string>
    <string name="Mental_health">Mental Health Crisis Line</string>
    <string name="Storm_Line">Storm Line</string>
    <string name="NS_Power">Nova Scotia Power</string>
    <string name="Health_Number">811</string>
    <string name="Poison_Number">902.428.8161</string>
    <string name="QEII_Number">902.473.2700</string>
    <string name="Police_Number">902.490.5020</string>
    <string name="MentalHealth_Number">1.888.429.8167</string>
    <string name="StormLine_NumberGov"><b>Gov of NS</b> / 902.424.6045</string>
    <string name="StormLine_Number">1.877.424.6045</string>
    <string name="NSPower_Number1">1.800.428.6230</string>
    <string name="NSPower_Number2">902.428.6230</string>
    <string name="Emergency_Numbers_Page">Emergency Numbers</string>
    <string name="UsingApp_WorkingAlone">Working Alone:</string>
    <string name="UsingApp_suggestion">Problems, concerns or suggestions? Please contact corporate Security. </string>
    <string name="UsingApp_Header">Using this App</string>
    <string name="UsingApp_Paragraph">During  regular working hours  the Floor Emergency  Wardens  are available  to assist  you and direct the  response  to crisis  events.   Outside of regular  hours, at remote locations, and while  on the road, employees are reminded to have  a “working alone” plan.  Your supervisor  should  be aware of your work location and you should  be aware of supports  available  to you to respond  to unusual  events.</string>
    <string name="SocialMedia_Header">Social Media</string>
    <string name="SocialMedia_Gov">Gov of NS</string>
    <string name="SocialMedia_HRM">HRM</string>
    <string name="SocialMedia_GovSite">www.novascotia.ca/connect/</string>
    <string name="SocialMedia_HRMSite">www.halifax.ca/home/social-media</string>
    <string name="SocialMedia_Explain">These are trusted social media source for additional information. </string>
    <string name="WeatherAndRoads_header">The Province of NS Storm line will be updated at 6 am each morning when severe weather is expected.</string>
    <string name="WeatherAndRoads_Header">Weather and Roads</string>
    <string name="WeatherAndRoads_WebSite">www.novascotia.ca</string>
    <string name="Roads_TEXT1">1.Check road and weather conditions before travelling. Contact your supervisor for guidance before travelling.</string>
    <string name="Roads_TEXT2">2.If you are at work, stay in the building until direction from your Manager or Floor Emergency Wardens.</string>
    <string name="Roads_TEXT3">3.Once the storm has past, report injuries or damage to Floor Emergency wardens or first responders. Complete a departmental incident report. Notify your Manager of any issues immediately.</string>
    <string name="Roads_TEXT4">4.When exiting the building, beware of downed power lines, broken glass, and unsafe areas.</string>
    <string name="Storm_Guidance">Storm guidance and road conditions</string>
    <string name="RoadsAndWeather_Phone">1.877.424.6045</string>
    <string name="Security_Header">Security</string>
    <string name="Security_firstBox">Non-emergencies-only!</string>
    <string name="Security_text1">If this is an emergency contact 911</string>
    <string name="Security_text2">If you were:</string>
    <string name="Security_text3">1.Threatened</string>
    <string name="Security_text4">2.Witnessed or were a victim of a crime or violence on government property</string>
    <string name="Security_Text6">3.Want to report a suspicious activity or security issue</string>
    <string name="Security_Text7">Alert your manager.</string>
    <string name="Call_911_first">The 911 service is there to support you during traumatic events.</string>
    <string name="Call_911_Header">When to Call 911</string>
    <string name="Call_911_1">Call 911 immediately if you are:</string>
    <string name="Call_911_2">injured or at immediate risk of being injured</string>
    <string name="Call_911_3">There is an immediate threat to yourself or others</string>
    <string name="Call_911_4">If you are concerned that an event could turn violent</string>
    <string name="Call_911_5">Call for help, alert your supervisor,peers or Floor Wardens if available</string>
    <string name="Call_911_6">Remove yourself from the threat if possible</string>
    <string name="Call_911_7">Once the event is under control contact Security and your department safety office or Health and safety committee.</string>
    <string name="Civil_Unrest_icon">Civil\nUnrest</string>
    <string name="Civil_Unrest_title">Civil Unrest</string>
    <string name="Civil_Unrest_1">If a Demonstration Occurs Outside the Building or in the Lobby</string>
    <string name="Civil_Unrest_2">Do not, under any circumstances, involve yourself with the demonstrators either verbally or physically.</string>
    <string name="Civil_Unrest_3">If the demonstrators prevent entry to your work location, withdraw and inform your supervisor.</string>
    <string name="Civil_Unrest_4">Wait for further direction.</string>
    <string name="Civil_Unrest_5">If the Building is Occupied</string>
    <string name="Civil_Unrest_6">Immediately secure all sensitive documentation and equipment.</string>
    <string name="Civil_Unrest_7">Do not say or do anything that will agitate the occupiers.</string>
    <string name="Civil_Unrest_8">Do not attempt to physically restrain the occupiers.</string>
    <string name="Civil_Unrest_9">Contact your Supervisor and Corporate Security.  Wait for further direction.</string>
    <string name="Threat_Hazards_Header">Specific Threats and Hazards</string>
    <string name="fire_label">Fire</string>
    <string name="Power_loss_label">Power Loss</string>
    <string name="Work_place_label">Workplace\nViolence</string>
    <string name="work_place_label2">Violence</string>
    <string name="medical_label">Medical</string>
    <string name="Unusual_odours1">Unusual</string>
    <string name="unusual_odours_2">Odours</string>
    <string name="Vehicle_collision1">Vehicle\nCollision</string>
    <string name="Vehicle_collision2">Collision</string>
    <string name="bomb_label">Bomb or Suspicious\nPackage</string>
    <string name="Civil_Unrest_Label">Civil\nUnrest</string>
    <string name="WorkPlace_Violence_header">Workplace Violence</string>
    <string name="Violence_1">Active Shooter/Violent Employee/Hostage Situations</string>
    <string name="Violence_2">1. Do NOT trigger a fire alarm unless there is an actual fire.</string>
    <string name="Violence_3">2. Remain calm and quiet.</string>
    <string name="Violence_4">3. If possible call 911 or 9-911 (work phone)</string>
    <string name="Violence_5">4. Notify those in your immediate vicinity.</string>
    <string name="Violence_6">5. Set all cellphones/smartphones to silent (not vibrate).</string>
    <string name="Violence_7">6. <font color='#000000'><b>Run</b></font> -Evacuate if possible, avoiding open areas and hallways.</string>
    <string name="Violence_8">7. <font color='#000000'><b>Hide</b></font> -If you cannot evacuate, find a safe place, barricade the door</string>
    <string name="Violence_9">8. <font color='#000000'><b>Fight</b></font> -If you are discovered, as a last resort you can Fight. Defend yourself with whatever makeshift weapon you can find in your workspace.</string>
    <string name="title_activity_odours">Odours</string>
    <string name="Odours_Header">Odours</string>
    <string name="Odours_1">Unusual Odours</string>
    <string name="Bomb_Threat_Header">Bomb Threats/Suspicious Packages</string>
    <string name="Bomb_Box_1">Bomb threats can be received in a variety of ways. Most bomb threats are made by persons who want to create an atmosphere of general anxiety or panic. All such threats must be taken seriously and handled as though a bomb is in the building.</string>
    <string name="Bomb_1">Bomb Threat by phone</string>
    <string name="Bomb_2">1. Remain Calm,   Listen to the caller, be calm and courteous. Do not interrupt the caller.Try to keep the caller on the line.</string>
    <string name="Bomb_3">2. Without upsetting caller, try to obtain as much information as possible. Ask questions, such as “Where is the bomb?”, “When is it going to go off?”  “What kind is it?”, “What does it look like?”</string>
    <string name="Bomb_4">3. Take notes on what is said and your observations about background noise, voice, language, etc.</string>
    <string name="Bomb_5">4.  Notify someone in the office while the call is still ongoing. They should contact 911 or 9 –911.</string>
    <string name="Bomb_6">5. Initiate call trace action (if available) while the call is ongoing (*57).</string>
    <string name="Bomb_7">6. Follow any instructions given by your Supervisor, Security, or First Responders.</string>
    <string name="Bomb_8">7. At the direction of 911, pull the fire alarm.</string>
    <string name="Bomb_9">Suspicious Object or Package</string>
    <string name="Bomb_10">If you find or receive a suspicious object, package, or mail:</string>
    <string name="Bomb_11">1. Remain Calm.    Do not touch or move the object.</string>
    <string name="Bomb_12">2. If you are holding  the object gently set it down on a solid surface or on the floor.</string>
    <string name="Bomb_13">3. Do not cover it.Do not attempt  to disarm it.</string>
    <string name="Bomb_14">4. Close doors to reduce air flow, and isolate the area.</string>
    <string name="Bomb_15">5. Alert your supervisor and Security if available.</string>
    <string name="Bomb_16">6. Alert others, leave the building.</string>
    <string name="Bomb_17">7. Call 911 or 9-911 from government phones when safe to do so</string>
    <string name="Bomb_18">8. If you come in contact  with package contents,</string>
    <string name="Bomb_19">1. Remain where you are and close the doors.</string>
    <string name="Bomb_20">2. Await further instructions  from First Responders.</string>
    <string name="Bomb_21">Otherwise, leave the immediate area and remain out of the area until  told you can return.</string>
    <string name="bomb_description">Bomb or Suspicious Package</string>
    <string name="submit">Submit</string>
    <string name="ns_logo_description">NS logo</string>
    <string name="PNS_launcher_logo">Launcher logo</string>
    <string name="login">Login</string>
</resources>