<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BombThreats">

    <android.support.v7.widget.CardView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:text="@string/Bomb_Threat_Header"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@+id/Header">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGrey"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            tools:context=".UsingTheApp">

            <android.support.v7.widget.CardView
                android:id="@+id/BombHeader"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/police_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="false"
                        android:layout_centerVertical="false"
                        android:layout_gravity="start|center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:text="@string/Bomb_Box_1"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/UsingAppFirst_CardView"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BombHeader">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView11"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_8" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView21"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_10" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView13"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_9"
                        android:textColor="@color/blueText"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView24"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_11" />

                    <TextView
                        android:id="@+id/storm_guidance_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="false"
                        android:layout_gravity="start|center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/white"
                        android:text="@string/Bomb_1"
                        android:textColor="@color/blueText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/storm_guidance_title"
                        android:layout_alignLeft="@+id/storm_guidance_title"
                        android:layout_below="@+id/storm_guidance_title"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_2" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/storm_guidance_title"
                        android:layout_alignLeft="@+id/storm_guidance_title"
                        android:layout_below="@+id/textView5"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_3" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/storm_guidance_title"
                        android:layout_alignLeft="@+id/storm_guidance_title"
                        android:layout_below="@+id/textView6"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_4" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/storm_guidance_title"
                        android:layout_alignLeft="@+id/storm_guidance_title"
                        android:layout_below="@+id/textView7"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_5" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/storm_guidance_title"
                        android:layout_alignLeft="@+id/storm_guidance_title"
                        android:layout_below="@+id/textView8"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_6" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView10"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_7"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView29"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_12"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView30"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_13"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView31"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_14"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView32"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_15"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView33"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_16"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView34"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_17"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView35"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_18"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView36"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_19"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView37"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_20"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView38"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:text="@string/Bomb_21"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView39"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/bomb_description"
                        app:srcCompat="@drawable/bomb_diagram" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/backgroundGrey"
        android:gravity="center">

        <SeekBar
            android:id="@+id/slide_seekbar"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/swipe911"
            android:progressDrawable="@android:color/transparent" />
    </RelativeLayout>
</RelativeLayout>