<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:weightSum="1"
    tools:context="com.ibm.emergencyapp.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGrey"
        app:srcCompat="@drawable/pns_logo"
        android:contentDescription="@string/ns_logo_description"/>

    <TextView
        android:id="@+id/useText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/backgroundGrey"
        android:gravity="center"
        android:text="@string/main_gov_restriction_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonSubmitEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/buttonColor"
        android:onClick="openLogin"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</LinearLayout>