<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:weightSum="1"
    tools:context="com.ibm.emergencyapp.TokenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGrey"
        app:srcCompat="@drawable/pns_logo"
        android:contentDescription="@string/PNS_launcher_logo"/>


    <TextView
        android:id="@+id/enterTokenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/backgroundGrey"
        android:gravity="center"
        android:text="@string/token_enter_token"
        tools:layout_editor_absoluteX="8dp"

        tools:layout_editor_absoluteY="207dp" />

    <EditText
        android:id="@+id/enterTokenBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonSubmitToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"

        android:background="@color/buttonColor"
        android:onClick="submitToken"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>
